# almanac

./: .gitmodules  biome.json  index.html  lefthook.yml  license  package.json  pnpm-lock.yaml  readme.md  rsbuild.config.ts  tailwind.config.js  tsconfig.json
src/: bindings.ts  const.ts  hooks.ts  libs.ts  main.tsx  routeTree.gen.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  utils.rs
src/components/: fs-card.tsx  path-breadcrumb.tsx
src/routes/: __root.tsx  index.tsx
