[package]
name = "almanac"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "almanac_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.0.0-rc.15", features = ["protocol-asset"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
infer = { version = "0.16", default-features = false }
specta-typescript = "0.0.7"
tauri-specta = { version = "=2.0.0-rc.20", features = ["derive", "typescript"] }
specta = "=2.0.0-rc.20"
mime_guess = "2.0.5"
tauri-plugin-store = "2"
tauri-plugin-dialog = "2"
blake3 = "1.5.4"
tauri-plugin-shell = "2"
anyhow = "1.0.91"
serde_with = "3.11.0"
